--- a/latex/files.tex
+++ b/latex/files.tex
@@ -1,4 +1,5 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{MyDLL_8h_source}{My\+DLL.\+h}} }{\pageref{MyDLL_8h_source}}{}
+\item\contentsline{section}{\mbox{\hyperlink{MyDLL_8c}{My\+DLL.\+c}} \\*Implementação de uma lista duplamente ligada (DLL) }{\pageref{MyDLL_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{MyDLL_8h}{My\+DLL.\+h}} \\*Módulo para implementação de uma lista duplamente ligada (DLL) }{\pageref{MyDLL_8h}}{}
 \end{DoxyCompactList}
